# cppLibStruct

./: README.md
prj/: CMakeLists.txt  README.md  dummyname.cpp  dummyname.h  samples.md
prj/.github/workflows/: cmake-multi-platform.yml
prj/tests/unit/: CMakeLists.txt  rebuild.cmd  rebuild.sh  test_dummyname.cpp
scripts/: cpplibgen.sh
